<resources>
    <string name="app_name">MD_Final_Project_Louis_BESSARD</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="nom">Nom</string>
    <string name="remplissez_le_formulaire">Remplissez le formulaire</string>
    <string name="submit">Submit</string>
    <string name="users">Users</string>
    <string name="home">Home</string>
    <string name="forms">Forms</string>
    <string name="bienvenue_sur_mon_application">Bienvenue sur mon application !</string>
    <string name="name">Name</string>
</resources>